fixed some layout problems

--- a/src/pages/getting-started/getting-started.scss
+++ b/src/pages/getting-started/getting-started.scss
@@ -3,16 +3,16 @@
         color: #60646B;
         font-size: 14px;
         line-height: 1.5;
-        padding: 0 5rem;
+        padding: 0 1rem;
     }
     .slide__description--bold {
         font-weight: 500;
         color: #000000;
     }
     .slide__image {
-        margin: 2rem 0;
+        margin-top: 1rem;
         max-height: 25%;
-        max-width: 60%;
+        max-width: 50%;
     }
     .slide__title {
         margin-top: 2rem;
